--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-12">
                     <p class="d-flex justify-content-between small p-1 m-0">
                         <!--reemplaza el # que sigue con la URL de tu cuenta en GitHub-->
-                        <a href="#" class="link-light">Reemplaza esto con tu Nombre y Apellido</a>
+                        <a href="https://github.com/helena-martinez" class="link-light">Helena Martínez</a>
                         <a href="https://github.com/profesorfaco/dno075-2021/" class="link-light">Infografía Digital</a>
                         <a href="https://github.com/profesorfaco/dno075-2021/tree/main/clase-02" class="d-none d-lg-inline link-light">Lunes 23 de agosto, 2021</a>
                     </p>
