--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
                 <!--primera imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john1.jpg" class="img-fluid" alt="describe lo que se ve en la imagen" />
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">The Daily Telegraph: Ilustración de Edificios.</figcaption>
                 </figure>
                 <!--segunda imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john2.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Condé Nast: La carrera para construir el edificio más alto.</figcaption>
                 </figure>
                 <!--tercera imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john3.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Condé Nast Traveler: Comida que sí valen los 500 USD.</figcaption>
                 </figure>
                 <!--cuarta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john4.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Condé Nast Traveler: Diseñando Dubai.</figcaption>
                 </figure>
                 <!--quinta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john5.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Condé Nast Traveler: A los Pies del Sultán.</figcaption>
                 </figure>
                 <!--sexta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john6.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Reemplaza el texto en este pie de foto.</figcaption>
+                    <figcaption class="p-1 mb-3">Condé Nast Traveler: Salvando Shangri-La.</figcaption>
                 </figure>
                 <!--no hay más imágenes-->
             </div>
