--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <h2 class="fs-6 mb-5 text-center text-uppercase">Helena Martínez</h2>
 
                     <p class="lead">Conocido como el “Caballero de las Infografías” (“The Infographics Gentleman”), John Grimwade es el director gráfico de la revista Condé Nast Traveler, en Nueva York y tiene su propio negocio de gráficos de información en su página web. Ha producido infografías para más de 30 revistas importantes y varios libros. Antes de mudarse a Estados Unidos, trabajó durante 14 años en periódicos de Londres (incluidos seis años como director de gráficos en The Times). Es coanfitrión del workshop anual de infografía Malofiej "Show Don’t Tell" en Pamplona, España, e imparte información gráfica en la Escuela de Artes Visuales de Manhattan.</p>
+                    <p>Página Web: https://www.johngrimwade.com/</p>
                 </div>
         </header>
 
