--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!--quinta imagen-->
                 <figure class="col-12 col-sm-6">
                     <img loading="lazy" src="img/john5.jpg" class="img-fluid" alt="describe lo que se ve en la imagen"/>
-                    <figcaption class="p-1 mb-3">Condé Nast Traveler: A los Pies del Sultán.</figcaption>
+                    <figcaption class="p-1 mb-3">Condé Nast Traveler: Siguiendo los Pasos del Sultán.</figcaption>
                 </figure>
                 <!--sexta imagen-->
                 <figure class="col-12 col-sm-6">
